# wsg50-ros2-pkg

./: CHANGELOG.md  README.md  TODO.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/wsg_50_common/include/wsg_50_common/wsg_50_common/msg/: cmd.h  cmd.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  status.hpp
install/wsg_50_common/include/wsg_50_common/wsg_50_common/srv/: conf.hpp  move.hpp
install/wsg_50_common/share/ament_index/resource_index/rosidl_interfaces/: wsg_50_common
install/wsg_50_common/share/wsg_50_common/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wsg_50_common/share/wsg_50_common/action/: Cmd.action
install/wsg_50_common/share/wsg_50_common/cmake/: ament_cmake_export_include_directories-extras.cmake  export_wsg_50_common__rosidl_typesupport_fastrtps_cExport.cmake  export_wsg_50_common__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  wsg_50_common__rosidl_typesupport_cExport-noconfig.cmake  wsg_50_common__rosidl_typesupport_cppExport-noconfig.cmake  wsg_50_common__rosidl_typesupport_introspection_cExport.cmake  wsg_50_common__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/wsg_50_common/share/wsg_50_common/msg/: Status.idl
install/wsg_50_common/share/wsg_50_common/srv/: Incr_Request.msg
install/wsg_50_driver/include/wsg_50_driver/: functions_can.h  interface.h  serial.h  udp.h
install/wsg_50_driver/share/ament_index/resource_index/package_run_dependencies/: wsg_50_driver
install/wsg_50_driver/share/ament_index/resource_index/parent_prefix_path/: wsg_50_driver
install/wsg_50_driver/share/wsg_50_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wsg_50_driver/share/wsg_50_driver/cmake/: ament_cmake_export_targets-extras.cmake
install/wsg_50_interface/share/ament_index/resource_index/parent_prefix_path/: wsg_50_interface
install/wsg_50_interface/share/wsg_50_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wsg_50_interface/share/wsg_50_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  wsg_50_interfaceConfig.cmake
install/wsg_50_simulation/share/wsg_50_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wsg_50_simulation/share/wsg_50_simulation/controllers/: wsg_50_standalone.yaml
install/wsg_50_simulation/share/wsg_50_simulation/launch/: wsg_50_controllers.launch.py
install/wsg_50_simulation/share/wsg_50_simulation/meshes/: finger_base.stl
log/: latest_build  latest_list
src/: README.md
src/wsg_50_common/: CMakeLists.txt  package.xml
src/wsg_50_driver/config/: controller.yaml
src/wsg_50_driver/src/: cmd.c  common.cpp  functions.cpp  interface.cpp  msg.c  serial.c  udp.c
src/wsg_50_interface/: CMakeLists.txt  wsg_50_hardware.xml
src/wsg_50_simulation/: readme.md
src/wsg_50_simulation/launch/: view_wsg50.launch.py
src/wsg_50_simulation/rviz/: wsg50.rviz
wsg_50_common/msg/: Status.msg
wsg_50_driver/: CMakeLists.txt  package.xml
wsg_50_driver/config/: wsg50_setup.yaml
wsg_50_driver/include/wsg_50_driver/: aux_.h  cmd.h  functions.h  tcp.h
wsg_50_driver/launch/: view_wsg_50_real.launch.py
wsg_50_driver/scripts/: frames_2025-06-10_15.53.40.gv  wsg50_action_client.py  wsg50_gui_slider.py
wsg_50_driver/src/: checksum.cpp  main.cpp  tcp.c
wsg_50_interface/: package.xml  wsg_hardware.xml
wsg_50_interface/include/wsg_50_interface/: wsg_50.hpp  wsg_ros_interface.hpp
wsg_50_interface/src/: wsg_50.cpp  wsg_ros_interface.cpp
wsg_50_simulation/: CMakeLists.txt
wsg_50_simulation/launch/: view_wsg50.launch.py  wsg_50.launch.py
wsg_50_simulation/meshes/: FL_ISO50_WSG50.stl  GRP_EX_meters.stl  GUIDE_WSG50_110.stl  GUIDE_WSG50_110_scaled.stl  WSG-FMF.stl  WSG-FMF_scaled.stl  WSG-FMF_scaled.stlbak  WSG-FMF_scaled_Extension.stl  WSG-FMF_scaled_latest.stl  WSG50_110_w_adaptor.stl  peg_finger.stl  peg_finger2.stl
wsg_50_simulation/rviz/: wsg.rviz  wsg50.rviz
wsg_50_simulation/urdf/: wsg50.urdf.xacro  wsg_50.srdf.xacro  wsg_50.urdf  wsg_50.urdf.xacro  wsg_50_gaz.urdf.xacro  wsg_50_gaz_peg.urdf.xacro
(+47 files in other folders)
